--- a/desc.tex
+++ b/desc.tex
@@ -343,7 +343,7 @@ hardware.
 
 
 \subsubsection{Nest Labs}
-Unlike the previous companies, \href{http://nest.com}{Nest Labs} is quite new,
+Unlike the previous companies, Nest Labs\cite{link19} is quite new,
 but has certainly claimed its space in the smart home market with its smart
 Nest Thermostat. Their other product, the Nest Protect, a smart smoke and
 CO$_2$ detector, integrates smoothly with the thermostat allowing for remote
@@ -358,11 +358,10 @@ that will display all of the networked devices, allowing for a highly connected
 experience. This would allow you to change your temperature from your warm bed
 or before you even get home.
 
-Nest Labs was recently
-\href{http://www.forbes.com/sites/greatspeculations/2014/01/17/googles-strategy-behind-the-3-2-billion-acquisition-of-nest-labs/}{purchased by Google for \$3.2 billion dollars},
+Nest Labs was recently purchased by Google for \$3.2 billion dollars\cite{link20},
 which certainly gives the company a powerful position in the market. One of
 Nest's goals is to have a \emph{platform} for other companies and developers to
-create new products that \href{https://nest.com/works-with-nest/}{\emph{Work with Nest \texttrademark}}. This strategy is
+create new products that \emph{Work with Nest \texttrademark}\cite{link21}. This strategy is
 clever as now the success of the company will grow with every new
 developer who chooses to integrate their products with the Nest suite.
 Customers will see the multitude of devices that work with Nest and realize
@@ -388,6 +387,6 @@ support. WHCS aims to do the opposite by providing a well documented home automa
 This became an issue with the original company of X10, X10 WTI, went
 bankrupt in 2013. This caused a disruption in the X10 ecosystem, including
 dedicated services run by X10 WTI. Luckily another company, Authinx, picked up
-the domain \url{www.x10.com} and is continuing to offer support and sales for
+the domain\cite{link1} and is continuing to offer support and sales for
 X10 products. Give this recent change of hands, choosing X10 today may not be a
 sure choice for the future.
