--- a/manage.tex
+++ b/manage.tex
@@ -47,7 +47,7 @@ price. This is important to note for auditors and for our future purchasing.
 {\color{black} \$90.00} &
 {\color{black} 1} &
 {\color{black} \$90.00} &
-{\color{black} \url{https://oshpark.com/pricing} \$5 per square inch. Assumed 4x4 board, and \$10 shipping}\\\hline
+{\color{black} OSH Park\cite{link11} \$5 per square inch. Assumed 4x4 board, and \$10 shipping}\\\hline
 {\color{black} Base Station LCD} &
 {\color{black} \$30.00} &
 {\color{black} 1} &
@@ -62,7 +62,7 @@ price. This is important to note for auditors and for our future purchasing.
 {\color{black} \$33.00} &
 {\color{black} 4} &
 {\color{black} \$132.00} &
-{\color{black} \url{http://www.4pcb.com/33-each-pcbs/}}\\\hline
+{\color{black} \cite{link12}}\\\hline
 {\color{black} Control module MCU} &
 {\color{black} \$4.00} &
 {\color{black} 4} &
@@ -72,7 +72,7 @@ price. This is important to note for auditors and for our future purchasing.
 {\color{black} \$15.00} &
 {\color{black} 1} &
 {\color{black} \$15.00} &
-{\color{black} \url{http://sparkfun.com}}\\\hline
+{\color{black} \cite{link13}}\\\hline
 {\color{black} Solid{}-State Relay} &
 {\color{black} \$17.00} &
 {\color{black} 4} &
