--- a/mfg.tex
+++ b/mfg.tex
@@ -132,7 +132,7 @@ would be nice if the color of our wires followed the understood meanings of
 wire colors in home wiring. In our design we have a single phase hot and
 neutral and ground. In the US the ground wire matches with green, the black
 wire matches with the hot wire, and the white wire matches with neutral.
-\footnote{\url{http://www.allaboutcircuits.com/vol_5/chpt_2/2.html}}
+\cite{link14}
 Using these color codes will make it easier to keep the project neat and
 organized. It will make it easier to avoid mistakes made in wiring a circuit
 
@@ -147,7 +147,7 @@ actual use in the future. In our design we will make use of electrical boxes
 since they are used in home electrical wiring. The boxes can be either metal or
 plastic, yet plastic boxes are a little easier to work with as they the holes
 are easier to punch out.
-\footnote{\url{http://homerenovations.about.com/od/electrical/a/artelecbox.htm}}
+\cite{link15}
 
 There are some specific considerations that must be made with the different
 control modules. First off for the light it is important that we use an actual
@@ -172,7 +172,7 @@ normally required for kitchen and bathrooms. Since none of the members in our
 group have extensive experience in working with AC power it is best that we
 take every safety precaution available. We do not expect that homes that
 actually implement our design to use GFIC outlets, it is simply an extra safety
-precaution that our group decided to take. \footnote{\url{http://diy.stackexchange.com/questions/15684/what-is-a-gfi-outlet-used-for-and-where-should-i-install-them}}
+precaution that our group decided to take. \cite{link16}
 
 
 For the door control module we decided to make our own door of the size 18'{}'
