--- a/pcb.tex
+++ b/pcb.tex
@@ -20,7 +20,7 @@ evaluation version that can only be used for non-commercial purposes.
 This freeware version of EAGLE has strict limitations in the size of the board
 that can be designed and how many signal layers there may be. The size of any
 board is limited to 4 x 3.2
-inches\footnote{\url{http://www.cadsoftusa.com/download-eagle/freeware/}} and
+inches\cite{link17} and
 there may only be a top and bottom copper layer. These limitations would be a
 show stopper for a moderately complex board, but considering our project
 requirements, it would be suitable.  If we are to consider future board designs
@@ -31,6 +31,6 @@ for WHCS, we may want a more flexible solution.
 As an alternative to EAGLE PCB, KiCad performs admirably well. It has all of
 the primary features of EAGLE and yet, is completely free and open source. The benefit of this is that the whole suite of tools is cross platform, allowing group members to easily work together despite different operating systems.
 
-One issue with KiCad is the lack of a built in Autorouter. KiCad provides an external router, FreeRouting\footnote{\url{http://www.freerouting.net/}}, but it has experienced recent legal trouble due to one of the developers previous employers.
+One issue with KiCad is the lack of a built in Autorouter. KiCad provides an external router, FreeRouting\cite{link18}, but it has experienced recent legal trouble due to one of the developers previous employers.
 
 Another nifty feature that KiCad has is its 3D board view. This feature is great for getting a sense of your board layout in relation to the selected footprints.
