Fix bug where pdfpages was breaking on draft
Renewing includegraphics command was breaking pdfpages internally. This
also renews includepdf

--- a/whcs.tex
+++ b/whcs.tex
@@ -162,6 +162,7 @@ pdfauthor={Grant Hernandez},
 % Disable images on draft mode
 \ifdefined\enabledraft
   \renewcommand{\includegraphics}[2][]{}
+  \renewcommand{\includepdf}[2][]{}
 \else
 \fi
 
