Update SD1 references -> SD2

--- a/title-page.tex
+++ b/title-page.tex
@@ -50,7 +50,7 @@
       \path (\paperwidth/6, 0.06\paperheight) node [shift={(1.5cm, 0cm)}] {\huge University of Central Florida}
       ++ (2\paperwidth/6, 0) node {\includegraphics[height=0.65in]{ucf-pegasus-bw}}
       ++ (2\paperwidth/6, 0) node [shift={(-1.9cm, 0)}] {\huge Senior Design
-      {\normalfont I} Group \texttt{\#}5};
+      {\normalfont II} Group \texttt{\#}5};
 
       \path (0.23\paperwidth, 0.035\paperheight) node [shift={(0cm, 0cm)}]
       {\emph{\today}};
