--- a/whcs.tex
+++ b/whcs.tex
@@ -1,5 +1,5 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% WHCS Senior design 1 document
+% WHCS Senior design 2 document
 %   Written at UCF in 2015 
 %   Typeset by Grant Hernandez
 %   For authors, see the title page
@@ -100,7 +100,7 @@
 \hypersetup{pdfnewwindow=true, % prevent the user from leaving the paper
 hidelinks,
 % PDF Meta
-pdftitle={Wireless Home Control System - UCF Senior Design I},
+pdftitle={Wireless Home Control System - UCF Senior Design II},
 pdfsubject={University of Central Florida Senior Design 2015},
 pdfauthor={Grant Hernandez},
 }
@@ -111,7 +111,7 @@ linkcolor={whcs-accent-dark},
 citecolor={blue!50!black},
 urlcolor={blue!80!black},
 % PDF Meta
-pdftitle={Wireless Home Control System - UCF Senior Design I},
+pdftitle={Wireless Home Control System - UCF Senior Design II},
 pdfsubject={University of Central Florida Senior Design 2015},
 pdfauthor={Grant Hernandez},
 }
