Richie: correct margin violations

--- a/hwsw.tex
+++ b/hwsw.tex
@@ -901,7 +901,7 @@ storing dynamic UI elements may prove to be too costly for the microcontroller.
 Until further testing is done, there is no way to say that this is possible or
 not beyond data structure size predictions.
 
-\ucfgfx[scale=0.60]{fig:ui-mockup-home}{ui-mockup}{A mockup of WHCS' home screen with each
+\ucfgfx[width=\textwidth]{fig:ui-mockup-home}{ui-mockup}{A mockup of WHCS' home screen with each
 control identified}
 
 \paragraph{View Abstraction}
@@ -2448,7 +2448,7 @@ power board will supply these power lines to the control module. The 5V and
 microcontroller and the radio transceiver. The 12V line is necessary solely for
 the electronic strike that we have chosen.
 
-\ucfgfx[width=16.51cm,height=9.878cm]{fig:ctrl-mod-sch}{a686SchematicBreakdownExpected2pages-img001.png}
+\ucfgfx[width=\textwidth]{fig:ctrl-mod-sch}{a686SchematicBreakdownExpected2pages-img001.png}
 {WHCS Control Module Schematic}
 
 All the control module endpoint targets are featured in this
