--- a/proto.tex
+++ b/proto.tex
@@ -38,7 +38,7 @@ successfully received. As a result, one of the LEDs attached to the control
 module breadboard toggled to an on state.
 
 This prototype was able to give us a good gauge of how feasible
-our approach to designing a wireless home automation solution was. We
+our approach to designing a wireless home automation solution was. We were 
 successfully able to get an Android device to communicate to a stripped down
 base station and then to a stripped down control module. The actions that were
 done with this prototype will be the core of WHCS. Every action done in the
